Make all elements invisible until javascript is loaded, preventing "blinks"

--- a/minimalistblog/static/standard-styles.css
+++ b/minimalistblog/static/standard-styles.css
@@ -1,12 +1,12 @@
 
 svg {
     width: 100%;
-    /* // overflow: visible; */
+    overflow: visible;
 }
 
 g {
     overflow: visible;
-    visibility: visible;
+    visibility: hidden;
 }
 
 /* Hide all posts, let javascript reveal them in animation */
